Using BigDecimal class for division calcul UX: Animation → Timer UX : Ergonomie → espace entre valeur dans la formule Functionality : Gestion des pourcentages debug : remove useless class