@@ -3,6 +3,8 @@ package io.capsulo.calculator.calculator;
 import android.text.TextUtils;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author lemarcque
@@ -41,11 +43,22 @@ public class Utils {
         digit = (double) integer;
         digit = digit - digit;
         if(digit == 0.0)
-            return new Double(d).intValue();
+            return Double.valueOf(d).intValue();
         return d;
     }
 
     public static String arrayToString(ArrayList<String> arr){
         return TextUtils.join("", arr);
+    }
+
+    public static String parseSpace(String formula) {
+        String str = new String();
+        for(char c : formula.toCharArray()) {
+            if(c == Constants.DIVIDE_OPERATOR.charAt(0) || c == Constants.MULTIPLE_OPERATOR.charAt(0) || c == Constants.PLUS_OPERATOR.charAt(0) || c == Constants.MINUS_OPERATOR.charAt(0))
+                str += " " + String.valueOf(c) + " ";
+            else
+                str += String.valueOf(c);
+        }
+        return str;
     }
 }
